# grpc_example

./: .gitignore  Dockerfile.elixir_client  Dockerfile.python_client  Dockerfile.python_server  README.md  docker-compose.yml
elixir_client/: Makefile  mix.exs
elixir_client/lib/: client.ex
elixir_client/lib/mix/tasks/: request.ex
python_client/: Makefile  client.py
python_client/hello/: hello_pb2.py  hello_pb2_grpc.py
python_server/: Makefile  pyproject.toml
python_server/hello/: hello_pb2.py  server.py
